@@ -42,6 +42,15 @@
 <ul>
 <li><a href="arch/markusfisch.de/2011">Visit</a></li>
 </ul></li>
+<li><h3>Kartpokal Franken</h3>
+
+<p>Was a regional indoor go-kart championship for everybody.
+My team was "KRC Schwabach".</p>
+
+<ul>
+<li><a href="http://www.kartpokal.de/">Website</a></li>
+<li><a href="https://github.com/markusfisch/kartpokal.de">GitHub</a></li>
+</ul></li>
 </ul></article></div>
 <div id="Footer"><footer><h2>Markus Fisch</h2>
 <p>Born 1975. Writes software for a living.
