@@ -16,3 +16,9 @@
 	This website from 2011 until 2017.
 
 	+ [Visit](arch/markusfisch.de/2011)
+* ### Kartpokal Franken
+	Was a regional indoor go-kart championship for everybody.
+	My team was "KRC Schwabach".
+
+	+ [Website](http://www.kartpokal.de/)
+	+ [GitHub](https://github.com/markusfisch/kartpokal.de)
